--- a/AppNgasal/app/src/main/AndroidManifest.xml
+++ b/AppNgasal/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="quewquewcrew.appngasal">
 
     <application
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.AuthActivity"></activity>
+        <activity android:name=".view.activity.AuthActivity" />
+        <activity android:name=".view.activity.DetailLapangan"></activity>
     </application>
 
 </manifest>
