--- a/AppNgasal/app/src/main/AndroidManifest.xml
+++ b/AppNgasal/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.activity.DetailLapangan" />
         <activity android:name=".view.activity.Komfirmasi" />
-        <activity android:name=".view.activity.Topup"></activity>
+        <activity android:name=".view.activity.Topup" />
+        <activity android:name=".view.activity.Wallet" />
+        <activity android:name=".view.activity.Pembayaran"></activity>
     </application>
 
 </manifest>
