--- a/AppNgasal/app/src/main/AndroidManifest.xml
+++ b/AppNgasal/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/appngasallogo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -24,6 +24,7 @@
         <activity android:name=".view.activity.Komfirmasi" />
         <activity android:name=".view.activity.Topup" />
         <activity android:name=".view.activity.Wallet" />
+        <activity android:name=".view.activity.ParentActivity" />
         <activity android:name=".view.activity.Pembayaran"></activity>
     </application>
 
